# Relevance-Optimized-Text-Trimming-for-Enormous-Data-ROTTED-

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  README.md  api.py  extract_zip.py  query_handle.py  requirements.txt
backend/EXTRACT20260214_1831/: test.txt
backend/EXTRACT20260214_1831/__MACOSX/: ._test.txt
backend/EXTRACT20260215_1033/: omega.txt
backend/FINALE20260215_1033/: results_20260215_1033.txt
backend/FINALE20260215_1034/: results_20260215_1034.txt
backend/UPLOAD/: text_messages.json
backend/bitvector_search/: Cargo.toml  Dockerfile  README.md
backend/bitvector_search/src/: lib.rs  main.rs
backend/src/: bake_thesaurus.rs  bitvector_file_save_bs.rs  chromadb_impl.rs  main.rs  verb_list.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  TextFormElement.tsx  index.css
