[package]
name = "bitvector_search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
# Candle dependencies
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
candle-transformers = { version = "0.8.2", features = ["cuda"] }
tokenizers = { version = "0.20", features = ["onig", "progressbar"] }
hf-hub = "0.3.2"
# Data handling dependencies
csv = "1.4.0"
rayon = "1.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
# zip = "8.1.0"
# Update this line in Cargo.toml
zip = { version = "8.0", features = ["deflate", "bzip2", "zstd", "deflate64"] }
header = "0.0.0"
